# bouffalo-hal

./: Cargo.toml
.cargo/: config.toml
blri/src/: main.rs
bouffalo-hal/: Cargo.toml
bouffalo-hal/src/: gpio.rs  lib.rs  sdio.rs  uart.rs
bouffalo-hal/src/gpio/: input.rs  input_async.rs  pad_v1.rs  pad_v2.rs
bouffalo-hal/src/sdio/: dma_sdh.rs  nodma_sdh.rs  pad.rs
bouffalo-hal/src/uart/: asynch.rs  blocking.rs  pad.rs
bouffalo-rt/src/soc/: bl616.rs  bl702.rs  bl808.rs
bouffalo-rt/src/soc/bl808/: entry.rs  firmware_header.rs  peripherals.rs  trap.rs
examples/board/sipeed-m0p-bl618/: Cargo.toml  README.md
examples/boards/bl702-dualuart/: Cargo.toml  README.md
examples/boards/bl702-dualuart/src/: main.rs
examples/peripherals/sdh-dma-demo/src/: main.rs
